--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,19 @@
 
 /* Your CSS Code here. */
+
+.col-sm-1{
+	height:100px;
+	width:100px;
+}
+.col-sm-2{
+	height:100px;
+	width:100px;
+}
+.col-sm-3{
+	height:100px;
+	width:100px;
+}
+.col-sm-4{
+	height:100px;
+	width:100px;
+}
